2007-01-10  Tanaka Akira  <akr@fsij.org>

	* ruby-usb 0.1 released.